# courts_probe

./: Dockerfile  README.md  app.py  courts.csv  docker-compose.yml  get_courts.ipynb  get_courts.py  links  main.py  proxy  pyproject.toml  regions.html
app/static/: style.css
app/templates/: index.html
blackbox/: blackbox.yml
courts_probe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: monitor.sqlite  statuses.sqlite
grafana/dashboards/: uptime-minimal.json
grafana/provisioning/dashboards/: dashboards.yml
prometheus/: prometheus.yml
targets/: proxy0.yml  proxy1.yml  proxy2.yml  proxy3.yml
