[project]
name = "courts-probe"
version = "0.2.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.112.0",
    "httpx[http2]>=0.28.1",
    "jinja2>=3.1.4",
    "lxml>=6.0.1",
    "tenacity>=9.1.2",
    "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.5",
    "pytest>=8.3.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app"]

[tool.setuptools.packages.find]
include = []
exclude = ["data"]
